--- a/ios/flickr.xcodeproj/xcshareddata/xcschemes/movie_app-tvOS.xcscheme
+++ b/ios/flickr.xcodeproj/xcshareddata/xcschemes/movie_app-tvOS.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "movie_app.app"
-               BlueprintName = "movie_app"
-               ReferencedContainer = "container:movie_app.xcodeproj">
+               BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+               BuildableName = "flickr-tvOS.app"
+               BlueprintName = "flickr-tvOS"
+               ReferencedContainer = "container:flickr.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "movie_appTests.xctest"
-               BlueprintName = "movie_appTests"
-               ReferencedContainer = "container:movie_app.xcodeproj">
+               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
+               BuildableName = "flickr-tvOSTests.xctest"
+               BlueprintName = "flickr-tvOSTests"
+               ReferencedContainer = "container:flickr.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -54,10 +54,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "movie_app.app"
-            BlueprintName = "movie_app"
-            ReferencedContainer = "container:movie_app.xcodeproj">
+            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+            BuildableName = "flickr-tvOS.app"
+            BlueprintName = "flickr-tvOS"
+            ReferencedContainer = "container:flickr.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -71,10 +71,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "movie_app.app"
-            BlueprintName = "movie_app"
-            ReferencedContainer = "container:movie_app.xcodeproj">
+            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+            BuildableName = "flickr-tvOS.app"
+            BlueprintName = "flickr-tvOS"
+            ReferencedContainer = "container:flickr.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
